fixup! Feat(web): Introduce new text utilities for text wrapping a word breaking

--- a/packages/web/src/scss/settings/_utilities.scss
+++ b/packages/web/src/scss/settings/_utilities.scss
@@ -1,3 +1,6 @@
+// 1. `word-break: break-word` is deprecated in favour of `overflow-wrap: anywhere`
+// https://developer.mozilla.org/en-US/docs/Web/CSS/word-break#break-word
+
 @use 'sass:map';
 @use '@tokens' as tokens;
 @use '../tools/map' as spirit-map;
@@ -274,6 +277,15 @@ $utilities: (
         values: (
             normal: normal,
             anywhere: break-all,
+        ),
+    ),
+    'text-word-break-with-overflow-wrwap': (
+        responsive: false,
+        // 1.
+        property: overflow-wrap,
+        class: 'text-word-break',
+        values: (
+            long-words: anywhere,
         ),
     ),
     'text-wrap': (
